# speedtest-rs

./: .env.example  Cargo.toml  LICENSE  README.md
src/: empty.rs  garbage.rs  get_ip.rs  haversine.rs  main.rs  serialized_ip_info.rs  util.rs
